Refactor to use JUnit Jupiter